reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_with_field_skip.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "(TestEnumWithFieldSkip::reflect_input(),\n    TestEnumWithFieldSkip::reflect_output())"
---
[
  [
    {
      "name": "reflect_demo::tests::serde::TestEnumWithFieldSkip"
    },
    {
      "types": [
        {
          "kind": "enum",
          "name": "reflect_demo::tests::serde::TestEnumWithFieldSkip",
          "variants": [
            {
              "name": "Variant1"
            }
          ]
        }
      ]
    }
  ],
  [
    {
      "name": "reflect_demo::tests::serde::TestEnumWithFieldSkip"
    },
    {
      "types": [
        {
          "kind": "enum",
          "name": "reflect_demo::tests::serde::TestEnumWithFieldSkip",
          "variants": [
            {
              "name": "Variant1"
            }
          ]
        }
      ]
    }
  ]
]
