reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__enum_with_rename_to_invalid_chars.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestEnumWithRenameToInvalidChars>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::TestEnumWithRenameToInvalidChars"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::TestEnumWithRenameToInvalidChars"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::TestEnumWithRenameToInvalidChars",
        "serde_name": "enum-name&&",
        "variants": [
          {
            "name": "Variant1",
            "serde_name": "variant-name&&",
            "fields": [
              {
                "name": "f",
                "serde_name": "field-name&&",
                "type": {
                  "name": "u8"
                },
                "required": true
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "enum",
        "name": "reflect_demo::tests::serde::TestEnumWithRenameToInvalidChars",
        "serde_name": "enum-name&&",
        "variants": [
          {
            "name": "Variant1",
            "serde_name": "variant-name&&",
            "fields": [
              {
                "name": "f",
                "serde_name": "field-name&&",
                "type": {
                  "name": "u8"
                },
                "required": true
              }
            ]
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
